# Cpp

./: .gitignore
core/src/: CMakeLists.txt  main.cpp
modules/math_lib/: CMakeLists.txt  math_lib.cpp  math_lib.hpp
